--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <h1>
   {{title}}
 </h1>
+<app-spy-parent></app-spy-parent>
+
+<hr />
+<a id="onchanges"></a>
+<on-changes-parent></on-changes-parent>
+<a href="#top">back to top</a>
+
+<hr />
+<a id="after-view"></a>
+<after-view-parent></after-view-parent>
+<a href="#top">back to top</a>
